--- a/style.css
+++ b/style.css
@@ -17,6 +17,26 @@
     border-radius: 10px;
     background-color: red;
 }
+.mycollege{
+    width: 100%;
+    height: 600px;
+}
+.mani{
+    padding-bottom: 50px;
+}
+.mani h2 {
+color:red;
+
+font-size: 60px;
+}
+.mani p{
+    color:red;
+    font-size: 30px;
+    }
+.mycollege img{
+    width: 100%;
+    height: 100%;
+}
 .navbar-brand{
    
     width: 100px;
